--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'app/**' # Only runs when you change things in the app folder
+      - 'app/**'
 
 jobs:
   build-and-push:
@@ -16,12 +16,20 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
+          # Double check this secret is named EXACTLY this in GitHub
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Configure Docker for GCP
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev
+      - name: Configure Docker
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+
+      - name: Verify App Directory
+        run: ls -R ./app # This confirms the Dockerfile is inside the folder
 
       - name: Build and Push Image
         run: |
-          docker build -t us-central1-docker.pkg.dev/wiztest-486720/wiz-app-repo/my-app:v1 ./app
-          docker push us-central1-docker.pkg.dev/wiztest-486720/wiz-app-repo/my-app:v1
+          # We use a variable for the project to avoid typos
+          PROJECT_ID="wiztest-486720"
+          REPO_PATH="us-central1-docker.pkg.dev/$PROJECT_ID/wiz-app-repo/my-app:v1"
+          
+          docker build -t $REPO_PATH ./app
+          docker push $REPO_PATH
